# CTEMsoft

./: .floo  .flooignore  .gitignore  CMakeLists.txt  CTEMECCI.f90  EMSoftSDK_Installation.md  License.txt  README.md  ReadMe.md  chgtext  t.txt  todo
Apps/: BridgeTest.cpp  BridgeTest.h  CMakeLists.txt  Data.cpp  Data.h
DOxygen/: Doxyfile
IDL/: README.txt  SourceList.cmake
IDL/Logs/: README.txt
IDL/Resources/: CTEMlogo.psd  CTEMmbcbed.res  DEFAULTS.txt  MASTERLIST.txt  README.txt  SEMONRlogo.psd  SEMlogo.psd  SYSVARS.txt  VMappsInstall.cmake.in
IDL/pro/: ANA_EBSD.pro  CBEDApply2DOperator.pro  CBEDApply2DSymmetry.pro  CBEDApply2DSymmetryPoint.pro  CBEDApply2DSymmetryStack.pro  CBEDCBEDDrawWidget.pro  CBEDCBEDDrawWidget_event.pro  CBEDCBEDWidget.pro  CBEDCBEDWidget_event.pro  CBEDCompute2DEquivalents.pro  CBEDDisplay.pro  CBEDDisplay.sav  CBEDDisplay_event.pro  CBEDDrawWidget.pro  CBEDDrawWidget_event.pro  CBEDGenerate2DSymmetry.pro  CBEDLACBEDWidget.pro  CBEDLACBEDWidget_event.pro  CBEDMBCBEDDrawWidget.pro  CBEDMBCBEDDrawWidget_event.pro  CBEDMBCBEDWidget.pro  CBEDMBCBEDWidget_event.pro  CBEDcircles.pro  (+146 more)
examples/: SourceList.cmake
lib/: CTEMlib.atools  CTEMlibnew.atools
lib_g/: Lambert.f90  MBmodule.f90  YSHmodule.f90  apb.f90  crystalvars.f90  dynamical.f90  files.f90  foilmodule.f90  gvectors.f90  math.f90  noise.f90  others.f90  pgm.f90  postscript.f90  symmetryvars.f90
manuals/: CBEDgui-commented.prefs  CMakeLists.txt  CTEMCBED.tex  CTEMEBSD.tex  CTEMEBSDnew.tex  CTEMsoft2013.tex  ECPgui-commented.prefs  EMEBSD.tex  EMsoft.tex  HDFsupport.tex  SEMECCI.tex  SEMECP.tex  STEMgui-commented.prefs  Spherical.tex  VariousThoughts.tex  citations.bib  common.tex  release.tex
manuals_todo/: CTEM-tasks.tex  CTEMEBSDnew.tex  CTEMKossel.tex  CTEMsoft2013-blx.bib  ECCIgui-commented.prefs  Kosselgui-commented.prefs  SEMECP-blx.bib  Spherical.tex  VariousThoughts-blx.bib  VariousThoughts.tex  originshift.tex
opencl/: CTEMMC.cl  CTEMMatExp.cl  Defectmodule.cl  DictIndx.cl  EMMC.cl  EMMCGB.cl  InnerProd.cl  MBmoduleOpenCL.cl  SourceList.cmake  out
opencl_todo/: EMMC-multilayer.cl  clDeviceInfo.c
prototype/: CTEMMatExp.cl  CTEMMatrixExpo.f90  MatExp  MatrixExpo.c  MatrixExpo.f90  gocl.sh  out
resources/: RandomSeeds.data  SourceList.cmake  cword  t  templatecodes.txt
src/: CLsupport.f90  CMakeLists.txt  EBSDmod.f90  ECPmod.f90  EMdymod.f90  EMdymodHDF.f90  EMsoftLib.h  HDF5Utilities.f90  HDFsupport.f90  JSONsupport.f90  Lambert.f90  MBmodule.f90  NameListHDFwriters.f90  NameListHandlers.f90  NameListTypedefs.f90  STEMmodule.f90  YSHmodule.f90  apb.f90  constants.f90  crystal.f90  crystalvars.f90  defectmodule.f90  dictmod.f90  diffraction.f90  dislocation.f90  dispfield.f90  doinsert.pro  doublediff.f90  dynamical.f90  error.f90  family.f90  files.f90  foilmodule.f90  graphics.f90  gvectors.f90  hdftest.f90  inclusion.f90  initializers.f90  io.f90  kvectors.f90  (+21 more)
src/cmake/: EMsoftConfig.cmake
src_C/: cldeviceinfo.c
src_SampleRFZ/: CMakeLists.txt  main.c  sampler.f90  so3-sampler.c  so3-sampler.h
src_g/: CTEMBWshow.f90  CTEMEBSD.f90  CTEMECPSM.f90  CTEMKossel.f90  CTEMTBBFDF.f90  CTEMTBSM.f90  CTEMZAdefect.f90  CTEMZAgeom.f90  CTEMgamma.f90  CTEMgammadefect.f90  CTEMholz.f90  CTEMlacbed.f90  CTEMlacbed.master.f90  CTEMlistSG.f90  CTEMoverlap.f90  CTEMqg.f90  CTEMstar.f90  tryECCI.f90
src_programs/: CMakeLists.txt  CTEMBWshow.f90  CTEMBethe.f90  CTEMBethe.f95  CTEMDictIndxOpenCL.f90  CTEMDictionaryIndexing.f90  CTEMEBSD.f90  CTEMEBSDmaster  CTEMEBSDmaster.f90  CTEMEBSDmasterOpenCL.f90  CTEMEBSDzE.f90  CTEMECCI.f90  CTEMECP.f90  CTEMECPDictionary.f90  CTEMECPSM.f90  CTEMECPSMMultiLayer.f90  CTEMECPmaster.f90  CTEMECPmasterOpenCL.f90  CTEMECPpattern.f90  CTEMECPthinfilm.f90  CTEMInnerProdOpenCL.f90  CTEMKikuchiMap.f90  CTEMKossel.f90  CTEMKosselmaster.f90  CTEMMC.cl  CTEMMC.f90  CTEMMCBSE.f90  CTEMMCOpenCL.f90  CTEMMCOpenCLMultiLayer.f90  CTEMMCTKD.f90  CTEMPEDIndexing.f90  CTEMParameterEstimationOpenCL.f90  CTEMSRBW.f90  CTEMSRCBED.f90  CTEMSRdefect.f90  CTEMScatMatOpenCL.f90  CTEMTBBFDF.f90  CTEMTBBW.f90  CTEMTBSM.f90  CTEMZAdefect.f90  (+114 more)
src_todo/: DMtest.f90  EMDictionaryIndexing.f90  EMEBSDmasterOpenCL.f90  EMEBSDoverlap.f90  EMECCI.f90  EMECPInterpolation.f90  EMECPSM.f90  EMECPSMMultiLayer.f90  EMECPpattern.f90  EMKikuchiMap.f90  EMKossel.f90  EMMCOpenCLMultiLayer.f90  EMMCTKD.f90  EMSRBW.f90  EMSRCBED.f90  EMZAdefect.f90  EMgamma.f90  EMgammadefect.f90  EMholz.f90  EMlacbed.f90  EMlacbed.master.f90  EMlacbed.serial.f90  EMlens.f90  EMmbcbed.f90  EMquatSP.f90  EMvrfft.f90  hdftest.f90  pgtest.f90  rotfloattest.f90
srcnew/: Lambert.f90  MBmodule.f90  STEMmodule.f90  constants.f90  crystal.f90  crystalvars.f90  dynamical.f90  eispack.f90  family.f90  files.f90  flist.txt  graphics.f90  gvectors.f90  initializers.f90  io.f90  local.f90  math.f90  multibeams.f90  names  others.f90  pertab.txt  postscript.f90  readme.txt  rng.f95  rotations.f90  stacking_fault.f90  symmetry.f90  symmetryvars.f90  void.f90
templatefolder/: BetheParameters.template  BetheParametersSEM.template  CTEMEBSD.template  CTEMEBSDmaster.template  CTEMEBSDzE.nml  CTEMECCI.template  CTEMECP.template  CTEMECPmaster.template  CTEMECPpattern.template  CTEMInnerProdOpenCL.template  CTEMKosselmaster.template  CTEMMC.template  CTEMMCCL.template  CTEMMCCLMultiLayer.template  CTEMPEDKIN.template  CTEMSRdefect.template  CTEMZAdefect.template  CTEMlacbed.template  CTEMmbcbed.template  CTEMoverlap.template  CTEMsampleRFZ.template  EMDictionaryIndexing.template  EMDynamicEBSDIndexing.template  EMEBSD.template  EMEBSDmaster.template  EMEBSDoverlap.template  EMECP.template  EMECPmaster.template  EMInnerProdOpenCL.template  EMKosselmaster.template  EMMCCL.template  EMMCOpenCL.template  EMPED.template  EMmbcbed.template  EMsampleRFZ.template  FOIL_rundata.template  README  STEM_rundata.template  STEMrundata.template  SourceList.cmake  (+2 more)
templatefolder_todo/: EMKossel.template  EMMC.template  EMPEDIndexing.template  EMPEDKIN.template  EMZAdefect.template  EMsampleRFZ.template  Ydislocation.template
(+142 files in other folders)
